# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org> emerge: now supports the
  EMERGE_OPTS make.conf variable for enabling emerge options by default. 
  Closes bug #605.
  
  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: dep_match() now
  works with * deps (again?  Looks like the code got ripped out somehow); this
  closes bug #490.
  
  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org> global change from
  "spython" -> "python", now that Portage is slick enough to update shared
  libraries correctly.
  
  21 Feb 2002; Grant Goodyear <g2boojum@gentoo.org> bin/chkcontents,
  man/chkcontents.1: New script to compare what's in a package's CONTENTS file
  with what's actually on the filesystem.  Useful for discovering that a
  package "collision" has occurred.

  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh, portage.py:
  Dependencies should be no longer checked during the "unpack" stage.  This
  closes bug #231.  Added the $KV kernel version variable to ebuild.sh so that
  it's available for all ebuilds.  This closes bug #599.
  
  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: S now defaults
  to ${WORKDIR}/${P} if it isn't defined.  That's right.  Defining S is now
  optional :)  This should eliminate around 1000 lines from our ports tree.
  
  20 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: Fixed some
  major bugs in the new merge/config protect code.  Merging and config
  protection should now work.
  
  18 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge,
  ebuild.sh : Rewrote merge code.  Should merge symlinks only *after* the
  target has been merged (needs testing).  Added lots of comments.  Split
  dblink.merge() into 2 new functions -- .walktree() and .mergeme().
  Cleaned/optimized merging a good deal.  Added special "-*" USE variable to