@@ -140,4 +140,4 @@
 # noauto : don't execute prior ebuild steps automatically
 #          (eg. 'ebuild install' does just that and not
 #          'fetch unpack compile install'
-#MAINTAINER="digest cvs sandbox noclean noauto"
+#FEATURES="digest cvs sandbox noclean noauto"
